# TickersToCandles

./: CMakeLists.txt  README.md  main.cpp  ucCtrlTickersToCandles.cpp  ucCtrlTickersToCandles.h  ucModelAsset.cpp  ucModelAsset.h  ucModelCandles.cpp  ucModelCandles.h  ucModelTicker.cpp  ucModelTicker.h
Base/: CMakeLists.txt  ucModelBase.cpp  ucModelBase.h  ucModelCad.cpp  ucModelCad.h
Generic/: CMakeLists.txt  uAux.cpp  uAux.h
